# shortas

./: .gitmodules  README.md  makefile
core/: makefile
core/api/: .dev.env  .env  Cargo.toml  README.md
core/api/src/: lib.rs  main.rs
core/api/src/adapters/api/: mod.rs
core/api/src/application/: mod.rs
core/api/src/application/mappers/: api_mapper.rs  db_mapper.rs
core/api/src/application/repositories/: encryption_repository_abstract.rs  mod.rs  routes_repository_abstract.rs
core/api/src/application/usecases/: interfaces.rs  mod.rs
core/api/src/application/utils/: error_handling_utils.rs
core/api/src/domain/: encryption.rs  error.rs  mod.rs  route_entity.rs
core/api/src/infrastructure/: mod.rs
core/redirect/flow-router/: .env  Cargo.toml  README.md
core/redirect/flow-router/config/: default.toml  development.toml  production.toml
core/redirect/flow-router/src/: app_builder.rs  lib.rs  log.rs  main.rs  server.rs  settings.rs
core/redirect/flow-router/src/core/: app_builder.rs  base_connection_handler.rs  base_crypto_cache.rs  base_crypto_manager.rs  base_crypto_store.rs  base_flow_router.rs  base_reverse_proxy.rs  base_routes_cache.rs  base_routes_manager.rs  base_routes_store.rs  base_tls_connection_handler.rs  mod.rs
core/redirect/flow-router/src/domain/: mod.rs  route.rs
core/redirect/flow-router/src/modules/: mod.rs
core/redirect/playground/axum-test/: Cargo.toml
core/redirect/playground/axum-test/src/: main.rs
core/redirect/playground/eval/: Cargo.toml
core/redirect/playground/eval/src/: main.rs
core/redirect/playground/proxy_test/: Cargo.toml
core/redirect/playground/proxy_test/src/: main.rs
core/redirect/playground/tls-server/: Cargo.toml
core/redirect/playground/tls-server/src/: lib.rs  main.rs
core/redirect/playground/tower-test/: Cargo.toml
core/redirect/playground/tower-test/src/: main.rs
core/redirect/tls-proxy/: Cargo.toml  readme.md
core/redirect/tls-proxy/src/: lib.rs
core/redirect/tls-proxy/src/dynamodb/: crypto_store.rs  mod.rs
core/redirect/tls-proxy/src/moka/: crypto_cache.rs  mod.rs
core/redirect/tls-proxy/src/rustls/: mod.rs
core/redirect/tls-proxy/src/server/: mod.rs  server_base.rs  server_tls.rs
docs/: CNAME
redirect/click-router/: .env  Cargo.toml  useful.txt
redirect/click-router-api/: .env  Cargo.toml  makefile
redirect/click-router-api/config/: default.toml
redirect/click-router-api/makefiles/: bench.mk  build.mk  release.mk  test.mk
redirect/click-router-api/src/: app_builder.rs  lib.rs  main.rs  settings.rs
redirect/click-router-api/src/adapters/api/: api_routes.rs  app_state.rs
redirect/click-router-api/src/adapters/aws/: app_builder_extensions.rs
redirect/click-router-api/src/core/: base_crypto_store.rs  base_routes_store.rs  base_user_settings_store.rs  mod.rs
redirect/click-router-api/src/model/: keycert.rs  mod.rs  route.rs
redirect/click-router/benches/: default.rs  flow_router.rs
redirect/click-router/config/: default.toml  development.toml  production.toml  test.toml
redirect/click-router/data/geo-ip/: .gitignore
redirect/click-router/makefiles/: bench.mk  build.mk  release.mk
redirect/click-router/scripts/: data-seed.local.sh
redirect/click-router/src/: app.rs  app_builder.rs  lib.rs  main.rs  settings.rs
redirect/click-router/src/adapters/: mod.rs
redirect/click-router/src/adapters/aws/: app_builder_extensions.rs  app_extension.rs  aws_settings.rs  mod.rs  settings.rs
redirect/click-router/src/adapters/fluvio/: app_extension.rs  hit_registrar.rs  settings.rs
redirect/click-router/src/adapters/geo_ip/: app_extension.rs  geo_ip_location_detector.rs  mod.rs  settings.rs
redirect/click-router/src/adapters/kafka/: app_extension.rs  hit_registrar.rs  settings.rs
redirect/click-router/src/adapters/moka/: app_builder_extensions.rs  app_extensions.rs  crypto_cache.rs  crypto_store.rs  mod.rs  moka_decorated_routes_store.rs  routes_cache.rs  routes_store.rs  settings.rs  user_settings_cache.rs  user_settings_store.rs
redirect/click-router/src/core/: base_flow_router.rs  base_location_detector.rs  base_routes_manager.rs  base_routes_store.rs  base_user_agent_detector.rs  base_user_settings_manager.rs  base_user_settings_store.rs  crypto.rs  crypto_manage.rs  crypto_store.rs  expression.rs  flow_module.rs  flow_router.rs  hits_register.rs  host.rs  ip.rs  language.rs  location.rs  location_detect.rs  mod.rs  protocol.rs  routes.rs  routes_manage.rs  routes_store.rs  user_agent.rs  user_agent_string.rs  user_settings.rs  user_settings_manage.rs  user_settings_store.rs
redirect/click-router/src/flow_router/: base_expression_evaluator.rs  base_flow_module.rs  base_host_detector.rs  base_host_extractor.rs  base_ip_detector.rs  base_ip_extractor.rs  base_language_extractor.rs  base_protocol_detector.rs  base_protocol_extractor.rs  base_user_agent_extractor.rs  default_flow_router.rs  expression_evaluate.rs  flow_module.rs  host_extract.rs  ip_extract.rs  language_extract.rs  mod.rs  protocol_extract.rs  user_agent_string_extract.rs
redirect/click-router/src/model/: expression.rs  hit.rs  keycert.rs  mod.rs  route.rs
redirect/click-router/src/server/: flow_router_service.rs  handler.rs  mod.rs  ssl_hyper_server.rs
redirect/click-router/src/utils/: async_queue.rs
redirect/click-tracker/: Cargo.toml
redirect/click-tracker/config/: default.toml  development.toml  production.toml  test.toml
redirect/click-tracker/makefiles/: bench.mk  build.mk  release.mk  test.mk
redirect/click-tracker/src/: app.rs  lib.rs  main.rs  settings.rs
redirect/click-tracker/src/adapters/: mod.rs
redirect/click-tracker/src/core/: click_aggs_register.rs  hit_stream.rs  location.rs  mod.rs  session.rs  session_detect.rs  tracking_pipe.rs
redirect/click-tracker/src/model/: click_stream_item.rs  hit.rs  mod.rs  user_settings.rs
redirect/click-tracker/src/tracking_pipe/: default_tracking_pipe.rs  mod.rs  tracking_module.rs
redirect/click-tracker/src/utils/: async_queue.rs  mod.rs
redirect/infra/domains/: Cargo.toml
redirect/infra/domains/src/: main.rs
(+322 files in other folders)
