[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
async-trait = "0.1.74"
aws-config = "1.0.3"
aws-sdk-dynamodb = "1.3.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features=["full"] }


[dev-dependencies]
mockall = "0.12.1"
