[package]
name = "click-router-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.82"
async-recursion = "1.1.1"
async-trait = "0.1.80"
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
config = "0.14.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
dyn-clone = "1.0.17"
env_logger = "0.11.3"
http = "1.1.0"
moka = { version = "0.12.7", features = ["future"] }
serde = "1.0.200"
serde_derive = "1.0.200"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
uaparser = "0.6.3"
urlencoding = "2.1.3"
