[package]
name = "click-router"
version = "0.1.0"
edition = "2021"
authors = ["Max Cechina <max.cechina@gmail.com>"]
description = "A click redirection server."
readme = "../README.md"
license = "MIT"
keywords = ["shortas", "router", "fast", "http", "redirect"]
documentation = "https://shortas.tech/"
homepage = "https://shortas.com"
repository = "https://github.com/FlyingCow/shortas"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.1"
async-trait = "0.1.80"
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
config = "0.14.0"
dotenv = "0.15.0"
dyn-clone = "1.0.17"
http = "1.1.0"
moka = { version = "0.12.7", features = ["future"] }
serde = "1.0.200"
serde_derive = "1.0.200"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.117"
thruster = "1.3.10"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.11"
tracing = "0.1.40"
uaparser = "0.6.3"
urlencoding = "2.1.3"
