[package]
name = "click-router"
version = "0.1.0"
edition = "2021"
authors = ["Max Cechina <max.cechina@gmail.com>"]
description = "A click redirection server."
readme = "../README.md"
license = "MIT"
keywords = ["shortas", "router", "fast", "http", "redirect"]
documentation = "https://shortas.tech/"
homepage = "https://shortas.com"
repository = "https://github.com/FlyingCow/shortas"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accept-language = "3.1.0"
anyhow = "1.0.82"
async-recursion = "1.1.1"
async-trait = "0.1.80"
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
config = "0.14.0"
dotenv = "0.15.0"
dyn-clone = "1.0.17"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = "1.3.1"
hyper-util = { version = "0.1.5", features = ["full"] }
maxminddb = "0.24.0"
moka = { version = "0.12.7", features = ["future"] }
rand = "0.8.5"
serde = "1.0.200"
serde_derive = "1.0.200"
serde_dynamo = { version = "4.2.14", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.117"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.11"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
uaparser = "0.6.3"
urlencoding = "2.1.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports", "async_futures"] }

[[bench]]
name = "default"
harness = false
