[package]
name = "click-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-recursion = "1.1.1"
async-trait = "0.1.80"
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
aws-sdk-kinesis = "1.25.0"
chrono = {version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
config = "0.14.0"
dotenv = "0.15.0"
dyn-clone = "1.0.17"
maxminddb = "0.24.0"
moka = { version = "0.12.7", features = ["future"] }
rand = "0.8.5"
serde = "1.0.200"
serde_derive = "1.0.200"
serde_json = "1.0.117"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.11"
tower = { version = "0.4.13", features = ["full"] }
tracing = "0.1.40"
uaparser = "0.6.3"
urlencoding = "2.1.3"
once_cell = "1.19.0"
tracing-subscriber = "0.3.18"
uuid = "1.8.0"
kafka = "0.10.0"
signal-hook = "0.3.17"
ulid = "1.1.3"
redis = { version = "0.26.1", features = [ "cluster"] }
fluvio = "0.26.1"
futures-util = "0.3.31"
