[package]
name = "click-tracker-ref"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
signal-hook = "0.3.17"
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = "0.7.14"
typed-builder = "0.21.0"
aws-config = "1.3.0"
aws-sdk-dynamodb = "1.25.0"
aws-sdk-kinesis = "1.25.0"
chrono = { version = "0.4.38", features = ["serde"] }
redis = { version = "0.29.1", features = ["cluster"] }
tracing = "0.1.40"
moka = { version = "0.12.7", features = ["future"] }
uaparser = "0.6.3"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0.200"
serde_json = "1.0.117"
maxminddb = "0.25.0"
ulid = "1.1.3"
kafka = "0.10.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
config = "0.15.11"
fluvio = "0.26.2"
futures-lite = "2.6.0"
tokio-graceful-shutdown = "0.16.0"
