[package]
name = "flow-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.75"
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
dotenv = "0.15.0"
env_logger = "0.10.1"
log = "0.4.20"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features=["full"] }
tracing = "0.1.40"
tracing-subscriber = { version4 = "0.3.17", features = ["env-filter"]}
