[package]
name = "flow-router"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-trait = "0.1.75"
aws-config = "1.1.1"
aws-sdk-dynamodb = "1.9.0"
bytes = "1.5.0"
config = "0.14.0"
dotenv = "0.15.0"
env_logger = "0.11.1"
futures-util = "0.3.30"
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = [ "full" ] }
hyper-rustls = "0.26.0"
hyper-util = { version = "0.1.2", features = ["full"] }
lazy_static = "1.4.0"
log = "0.4.20"
moka = { version = "0.12", features = ["future"] }
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
serde = "1.0.195"
serde_derive = "1.0.195"
thiserror = "1.0.56"
tokio = { version = "1.34.0", features=["full"] }
tokio-rustls = "0.25.0"
tower = { version = "0.4.13", features = ["full"] }
tower-http = "0.5.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
