[package]
name = "tls-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "tls_proxy"
path = "src/main.rs"

[lib]
name = "tls_proxy"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
error = "0.1.9"
hyper = "0.14.27"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.34.0"
moka = { version = "0.12.1", features = ["future"] }
this = "0.3.0"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
tokio-rustls = "0.24.1"
tracing = "0.1.40"
tracing-subscriber = { version4 = "0.3.17", features = ["env-filter"]}
rustls = "0.21.8"
futures-util = "0.3.29"
rustls-pemfile = "1.0.4"
http-body-util = "0.1.0-rc.3"
bytes = "1.5.0"
