[package]
name = "domains"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
salvo = { path = "../../../salvo/crates/salvo", features = [
    "anyhow",
    "proxy",
    "rustls",
    "quinn",
    "test",
    "logging",
] }
tracing-subscriber = "0.3.19"
