[package]
name = "axum-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7.4"
tower-service = "0.3.2"
tower = { version = "0.4", features = ["full"] }
http = "1.0.0"
anyhow = "1.0.79"
