[package]
name = "eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
fast_uaparser = "2.0.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.29"
stopwatch = "0.0.7"
uaparser = "0.6.1"
woothee = "0.13.0"
