[package]
name = "proxy_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features=["full"] }
hyper = { version = "1.1.0", features = [ "full" ] }
hyper-util = { version = "0.1.3", features = ["full"] }
bytes = "1.5.0"
http-body-util = "0.1.0"
http = "1.0.0"
