[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.1"
futures = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = [ "full" ] }
hyper-util = { version = "0.1.2", features = ["full"] }
rustls = "0.22.1"
rustls-pemfile = "2.0.0"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
tracing = "0.1.40"
