[package]
name = "tower-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
http = "1.0.0"
hyper = "1.1.0"
hyper-util = "0.1.2"
tokio = { version = "1.34.0", features=["full"] }
tower = "0.4.13"
tower-http = { version = "0.5", features = ["timeout", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
